--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
+    "@nuxtjs/cloudinary": "^1.0.3",
     "@tailwindcss/typography": "^0.4.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
-    "transliteration": "^2.2.0"
+    "transliteration": "^2.2.0",
+    "vue-clickaway": "^2.2.2",
+    "vue-image-upload-resize": "^2.3.0"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^1.3.0",
