--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "transliteration": "^2.2.0",
-    "vue-clickaway": "^2.2.2",
-    "vue-image-upload-resize": "^2.3.0"
+    "vue-clickaway": "^2.2.2"
   },
   "devDependencies": {
     "@nuxtjs/google-fonts": "^1.3.0",
