--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/cloudinary": "^1.0.3",
     "@tailwindcss/typography": "^0.4.1",
     "core-js": "^3.15.1",
+    "express": "^4.17.1",
     "nuxt": "^2.15.7",
     "transliteration": "^2.2.0",
     "vue-clickaway": "^2.2.2"
